--- a/index.html
+++ b/index.html
@@ -21,9 +21,6 @@
             </div>
 
             <div class="header__nav">
-                <!-- <button type="button" class="burger">
-                    <span class="burger__item">menu</span>
-                </button> -->
                 <div class="burger__inner">
                     <input type="checkbox" id="check__menu">
                     <label for="check__menu">
@@ -60,47 +57,46 @@
                 <h1 class="intro__title">the brand</h1>
                 <h2 class="intro__subtitle">OF LUXERIOUS <span class="intro__span">FASHION</span></h2>
             </div>
-            <div class="dec__block_intro">
-
-            </div>
+            <!-- <div class="dec__block_intro">
+            </div> -->
         </div>
     </section>
 
     <section class="offer">
         <div class="wrapper wrapper__offer">
             <div class="offer__inner">
-                <div class="for__element">
+                <article class="for__element">
                     <a href="#!">
                         <img class="for__element_pic" src="./img/woman.png" alt="">
                         <div class="for__bg">
                             <h2 class="for__bg_text">30% OFF<br><span class="bg__text_span">FOR WOMEN</span></h2>
                         </div>
                     </a>
-                </div>
-                <div class="for__element">
+                </article>
+                <article class="for__element">
                     <a href="#!" class="for__element_link">
                         <img class="for__element_pic" src="./img/men.png" alt="">
                         <div class="for__bg">
                             <h2 class="for__bg_text">HOT DEAL<br><span class="bg__text_span">FOR men</span></h2>
                         </div>
                     </a>
-                </div>
-                <div class="for__element">
+                </article>
+                <article class="for__element">
                     <a href="#!" class="for__element_link">
                         <img class="for__element_pic" src="./img/kid.png" alt="">
                         <div class="for__bg">
                             <h2 class="for__bg_text">NEW ARRIVALS<br><span class="bg__text_span">FOR kids</span></h2>
                         </div>
                     </a>
-                </div>
-                <div class="for__element for__element_long">
+                </article>
+                <article class="for__element for__element_long">
                     <a href="#!" class="for__element_link">
                         <img class="for__element_pic" src="./img/accesories.png" alt="">
                         <div class="for__bg">
                             <h2 class="for__bg_text">LUXIROUS &amp;&nbsp;TRENDY<br><span class="bg__text_span">ACCESORIES</span></h2>
                         </div>
                     </a>
-                </div>
+                </article>
             </div>
             <!-- <div class="offer__last">
                 <div class="for__element_long">
