--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
                     </label>
                     <nav class="burger__menu">
                         <a class="burger__menu_link" href="./catalog.html">Catalog</a>
-                        <a class="burger__menu_link" href="#">Product</a>
-                        <a class="burger__menu_link" href="#">Cart</a>
+                        <a class="burger__menu_link" href="./product.html">Product</a>
+                        <a class="burger__menu_link" href="./cart.html">Cart</a>
                         <a class="burger__menu_link" href="#">Registration</a>
                     </nav>
                 </div>
