--- a/catalog.html
+++ b/catalog.html
@@ -30,8 +30,8 @@
                     </label>
                     <nav class="burger__menu">
                         <a class="burger__menu_link" href="./catalog.html">Catalog</a>
-                        <a class="burger__menu_link" href="#">Product</a>
-                        <a class="burger__menu_link" href="#">Cart</a>
+                        <a class="burger__menu_link" href="./product.html">Product</a>
+                        <a class="burger__menu_link" href="./cart.html">Cart</a>
                         <a class="burger__menu_link" href="#">Registration</a>
                     </nav>
                 </div>
@@ -282,7 +282,7 @@
                 
             </div>
             <div class="catalog__pages_inner">
-                <div class="catalog__pages">
+                <!-- <div class="catalog__pages">
                     <svg width="9" height="14" class="arrow__icon_left" viewBox="0 0 9 14" xmlns="http://www.w3.org/2000/svg">
                         <path d="M8.99512 2L3.99512 7L8.99512 12L7.99512 14L0.995117 7L7.99512 0L8.99512 2Z"/>
                     </svg>
@@ -297,7 +297,43 @@
                     <svg width="9" height="14" class="arrow__icon_right" viewBox="0 0 9 14"  xmlns="http://www.w3.org/2000/svg">
                         <path d="M0.994995 12L5.995 7L0.994995 2L1.995 0L8.995 7L1.995 14L0.994995 12Z"/>
                         </svg>
-                </div>
+                </div> -->
+                <ul class="catalog__pages">
+                    <li class="catalog__pages_item">
+                        <a href="#!" class="catalog__pages_link">                    <svg width="9" height="14" class="arrow__icon_left" viewBox="0 0 9 14" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M8.99512 2L3.99512 7L8.99512 12L7.99512 14L0.995117 7L7.99512 0L8.99512 2Z"/>
+                        </svg></a>
+                    </li>
+                    <li class="catalog__pages_item">
+                        <a href="#!" class="catalog__pages_link">1</a>
+                    </li>
+                    <li class="catalog__pages_item">
+                        <a href="#!" class="catalog__pages_link">2</a>
+                    </li>
+                    <li class="catalog__pages_item">
+                        <a href="#!" class="catalog__pages_link">3</a>
+                    </li>
+                    <li class="catalog__pages_item">
+                        <a href="#!" class="catalog__pages_link">4</a>
+                    </li>
+                    <li class="catalog__pages_item">
+                        <a href="#!" class="catalog__pages_link">5</a>
+                    </li>
+                    <li class="catalog__pages_item">
+                        <a href="#!" class="catalog__pages_link">6</a>
+                    </li>
+                    <li class="catalog__pages_item">
+                        <a href="#!" class="catalog__pages_link">.....</a>
+                    </li>
+                    <li class="catalog__pages_item">
+                        <a href="#!" class="catalog__pages_link">20</a>
+                    </li>
+                    <li class="catalog__pages_item">
+                        <a href="#!" class="catalog__pages_link">                    <svg width="9" height="14" class="arrow__icon_right" viewBox="0 0 9 14"  xmlns="http://www.w3.org/2000/svg">
+                            <path d="M0.994995 12L5.995 7L0.994995 2L1.995 0L8.995 7L1.995 14L0.994995 12Z"/>
+                            </svg></a>
+                    </li>
+                </ul>
             </div>
         </div>
     </section>
