--- a/cart.html
+++ b/cart.html
@@ -128,10 +128,12 @@
                 <h2 class="shipping--title">
                     SHIPPING ADRESS
                 </h2>
-                <input type="text" class="shipping--input country" placeholder="Bangladesh">
-                <input type="text" class="shipping--input state" placeholder="State">
-                <input type="text" class="shipping--input postcode--zip" placeholder="Postcode / Zip">
-                <button type="button" class="quote">GET A QUOTE</button>
+                <form action="#">
+                    <input type="text" class="shipping--input country" placeholder="Bangladesh">
+                    <input type="text" class="shipping--input state" placeholder="State">
+                    <input type="text" class="shipping--input postcode--zip" placeholder="Postcode / Zip">
+                    <button type="submit" class="quote">GET A QUOTE</button>
+                </form>
                 <div class="cost--block">
                     <div class="sub--total-text">
                         <span class="sub--total-cost">SUB TOTAL</span> 
