--- a/catalog.html
+++ b/catalog.html
@@ -62,6 +62,11 @@
                     <a href="#!" class="news__filters filter__arrivals">NEW ARRIVALS</a>
                 </div>
             </div>
+            <!-- <ul class="breadcrumb__inner">
+                <li class="breadcrumb__inner_item"><a href="#!" class="breadcrumb__inner_item_link">home</a></li>
+                <li class="breadcrumb__inner_item"><a href="#!" class="breadcrumb__inner_item_link" >men</a></li>
+                <li class="breadcrumb__inner_item"><a href="#!" class="breadcrumb__inner_item_link">NEW ARRIVALS</a></li>
+            </ul> -->
         </div>
     </section>
 
