--- a/index.html
+++ b/index.html
@@ -79,37 +79,41 @@
     </section>
 
     <div class="offer">
-        <div class="wrapper wrapper__offer">
+        <div class="wrapper__offer">
             <div class="offer__inner">
-                <article class="for__element">
+                <article class="offer__inner_item">
                     <a href="#!">
-                        <img class="for__element_pic" src="./img/woman.png" alt="">
-                        <div class="for__bg">
-                            <h2 class="for__bg_text">30% OFF<br><span class="bg__text_span">FOR WOMEN</span></h2>
+                        <img src="./img/woman.png" class="offer__inner_pic" alt="">
+                        <div class="offer__inner_bg">
+                            <h2 class="bg__title">30% OFF</h2>
+                            <span class="bg__text">FOR WOMEN</span>
                         </div>
                     </a>
                 </article>
-                <article class="for__element">
-                    <a href="#!" class="for__element_link">
-                        <img class="for__element_pic" src="./img/men.png" alt="">
-                        <div class="for__bg">
-                            <h2 class="for__bg_text">HOT DEAL<br><span class="bg__text_span">FOR men</span></h2>
+                <article class="offer__inner_item">
+                    <a href="#!">
+                        <img src="./img/men.png" class="offer__inner_pic" alt="">
+                        <div class="offer__inner_bg">
+                            <h2 class="bg__title">HOT DEAL</h2>
+                            <span class="bg__text">FOR men</span>
                         </div>
                     </a>
                 </article>
-                <article class="for__element">
-                    <a href="#!" class="for__element_link">
-                        <img class="for__element_pic" src="./img/kid.png" alt="">
-                        <div class="for__bg">
-                            <h2 class="for__bg_text">NEW ARRIVALS<br><span class="bg__text_span">FOR kids</span></h2>
+                <article class="offer__inner_item">
+                    <a href="#!">
+                        <img src="./img/kid.png" class="offer__inner_pic" alt="">
+                        <div class="offer__inner_bg">
+                            <h2 class="bg__title">NEW ARRIVALS</h2>
+                            <span class="bg__text">FOR kids</span>
                         </div>
                     </a>
                 </article>
-                <article class="for__element for__element_long">
-                    <a href="#!" class="for__element_link">
-                        <img class="for__element_pic" src="./img/accesories.png" alt="">
-                        <div class="for__bg">
-                            <h2 class="for__bg_text">LUXIROUS &amp;&nbsp;TRENDY<br><span class="bg__text_span">ACCESORIES</span></h2>
+                <article class="offer__inner_item-long">
+                    <a href="#!">
+                        <img src="./img/accesories.png" class="offer__inner_pic-long" alt="">
+                        <div class="offer__inner_bg">
+                            <h2 class="bg__title">LUXIROUS &amp;&nbsp;TRENDY</h2>
+                            <span class="bg__text">ACCESORIES</span>
                         </div>
                     </a>
                 </article>
