--- a/product.html
+++ b/product.html
@@ -73,7 +73,7 @@
             <ul class="breadcrumb__inner">
                 <li class="breadcrumb__inner_item"><a href="#!" class="breadcrumb__inner_item_link">home</a></li>
                 <li class="breadcrumb__inner_item"><a href="#!" class="breadcrumb__inner_item_link" >men</a></li>
-                <li class="breadcrumb__inner_item"><a href="#!" class="breadcrumb__inner_item_link">NEW ARRIVALS</a></li>
+                <li class="breadcrumb__inner_item"><a class="breadcrumb__inner_item_link">NEW ARRIVALS</a></li>
             </ul>
         </div>
     </section>
