--- a/cart.html
+++ b/cart.html
@@ -92,7 +92,7 @@
                         </h2>
                         <h2 class="shopping__text_subtitle">
                             Quantity:	
-                            <input class="quantity" placeholder="1">	
+                            <input type="number" class="quantity" placeholder="1">	
                         </h2>
                     </div>
                     <div class="card--cross">
@@ -121,7 +121,7 @@
                             </h2>
                             <h2 class="shopping__text_subtitle">
                                 Quantity:
-                                <input class="quantity" placeholder="1">	
+                                <input type="number" class="quantity" placeholder="1">	
                             </h2>
                         </div>
                         <div class="card--cross">
